<resources>
    <string name="app_name">Мои заметки</string>
    <string name="name">Имя заметки</string>
    <string name="autor_string">Автор</string>
    <string name="select_new_string">Выберите новое время</string>
    <string name="popular">Популярные</string>
    <string name="about_app">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="share_note">Поделиться</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>
    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>
    <string name="nav_header_title">Артем Мясоедов</string>
    <string name="nav_header_subtitle">artem@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_save">Сохранить</string>
    <string name="action_remove">Удалить</string>
    <string name="action_add">Добавить</string>
    <string name="description">Описание</string>
    <string name="action_select_time">Выбрать время</string>
    <string name="key_delete">request_delete</string>
    <string name="key_save">request_save</string>
    <string name="fields_do_not_empty">Поля не могут быть пустые</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="question_delete_note">Удалить заметку?</string>
</resources>